tests/should_succeed/while.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    # Output: 0
    # Output: 1
    # Output: 2
    # Output: 3
    # Output: 4
    i = 0
    while i < 5:
        printf("%d\n", i)
        i = i+1
    return 0
