tests/syntax_error/chained_le.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    x = 5
    printf("%d\n", 1 <= x <= 10)  # Error: comparisons cannot be chained
